--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,11 @@
     transform: translate(-50%, -50%);
 }
 
+/* .subir{
+    position: fixed;
+    bottom: 30px;
+    right: 70px;
+} */
 .inicio {
     width: 250px;
 }
@@ -96,11 +101,6 @@ footer {
     color: #88888862;
 }
 
-
-.aaa {
-    height: 100vh;
-}
-
 #abaut {
     display: none;
 }
@@ -142,8 +142,22 @@ span{
   margin: 16px;
 }
 
+/* Estilos del modal */
+.modal {
+    display: none;
+    z-index: 1; 
+    padding: 20px 20px;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+  }
 
-
+  .imgC{
+    width: 100%;
+    height: 100%;
+    padding: 16px;
+  }
+  
 /* Media Queries */
 @media (min-width: 768px) {
     .inicio {
@@ -219,6 +233,9 @@ span{
     #perfil {
         height: 100vh;
     }
+    .modal {
+        padding: 90px 90px;
+      } 
 }
 
 @media (min-width: 1024px) {
@@ -231,6 +248,9 @@ span{
         right: 10px;
         top: 5px;
     }
+    .modal {
+        padding: 90px 150px;
+      } 
 }
 
 @media (min-width: 1440px) {
@@ -261,11 +281,16 @@ span{
     }
 
     #fotoAbout {
-        display: block;
-        margin: 200px 20px;
-        width: 550px;
-        overflow: hidden;
-        object-fit: cover;
+        display: block; 
+        margin: 70px 0px;
+        text-align: center;
     }
-
+    #fotoAbout img{
+        width: 100%;
+        height: auto;
+    }
+    
+    .modal {
+        padding: 90px 200px;
+      } 
 }
