--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@
     height: 250px;
     object-fit: cover;
     border-radius: 5px;
-    
 }
 
 .avatar {
@@ -61,15 +60,17 @@
 figcaption {
     margin-top: 10px;
 }
-nav{
+
+nav {
     justify-content: center;
-    display:flex ;
+    display: flex;
 }
+
 nav li {
     list-style-type: none;
     padding: 0;
     margin-top: 20px;
-    
+
 }
 
 nav a {
@@ -129,52 +130,54 @@ footer {
     border-radius: 16px;
 }
 
-span{
+span {
     color: #797979;
     font-size: 15px;
 }
 
-#fotoAbout{
+#fotoAbout {
     display: none;
 }
 
-#infoAbout{
-  margin: 16px;
+#infoAbout {
+    margin: 16px;
 }
 
 /* Estilos del modal */
 .modal {
     display: none;
-    z-index: 1; 
+    z-index: 1;
     padding: 20px 20px;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.9);
-  }
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
 
-  .imgC{
+.imgC {
     width: 100%;
     height: 100%;
     padding: 16px;
-  }
-  
+}
+
 /* Media Queries */
 @media (min-width: 768px) {
     .inicio {
         width: 350px;
     }
-    nav{
+
+    nav {
         display: block;
         margin-top: 200px;
     }
-    footer{
+
+    footer {
         margin-left: 71px;
         position: absolute;
         bottom: 30px;
         align-items: center;
     }
 
-    #trabajos{
+    #trabajos {
         margin-top: 16px;
         height: 60vh;
         overflow: auto;
@@ -194,8 +197,8 @@ span{
     .tlna {
         margin-top: -100px;
     }
-    
-    #infoAbout{
+
+    #infoAbout {
         margin-top: 50px;
     }
 
@@ -222,35 +225,42 @@ span{
         background-color: #000000;
     }
 
-    .card:first-child img {
+    /* Estilo para el primer .card */
+    .card:first-child img,
+    .card:last-child img {
         height: 300px;
     }
 
-    .card:first-child {
+    .card:first-child,
+    .card:last-child {
         grid-column: span 2;
     }
 
+
     #perfil {
         height: 100vh;
+        width: 310px;
     }
+
     .modal {
         padding: 90px 90px;
-      } 
+    }
 }
 
 @media (min-width: 1024px) {
     .card:first-child img {
         height: 350px;
     }
-    
+
     #fecha {
         position: absolute;
         right: 10px;
         top: 5px;
     }
+
     .modal {
         padding: 90px 150px;
-      } 
+    }
 }
 
 @media (min-width: 1440px) {
@@ -258,7 +268,7 @@ span{
         grid-template-columns: 1fr 1fr 1fr;
     }
 
-    #trabajos{
+    #trabajos {
         height: 65vh;
     }
 
@@ -266,12 +276,17 @@ span{
         height: 400px;
     }
 
-    .card-img-top {
+    /* Estilo para el primer .card */
+    .card:first-child img,
+    .card:last-child img {
         height: 350px;
     }
-    .card:first-child {
+
+    .card:first-child,
+    .card:last-child {
         grid-column: span 3;
     }
+
     #abaut {
         height: 100vh;
         display: grid;
@@ -281,16 +296,22 @@ span{
     }
 
     #fotoAbout {
-        display: block; 
+        display: block;
         margin: 70px 0px;
         text-align: center;
     }
-    #fotoAbout img{
+
+    #fotoAbout img {
         width: 100%;
         height: auto;
     }
-    
+
     .modal {
         padding: 90px 200px;
-      } 
+    }
+
+    .card-img-top {
+        height: 350px;
+    }
+    
 }
