--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@
 }
 
 .avatar {
-    width: 120px;
-    border-radius: 50%;
+    width: 110px;
+   
     margin-bottom: 10px;
 }
 
@@ -135,6 +135,16 @@ span {
     font-size: 15px;
 }
 
+.madalF{
+    background-color: black;
+}
+
+#colse{
+    text-align: end;
+    display: block;
+    font-size: 20px;
+}
+
 #fotoAbout {
     display: none;
 }
@@ -156,11 +166,22 @@ span {
 .imgC {
     width: 100%;
     height: 100%;
-    padding: 16px;
+    padding: 4px;
+    background-color: #000000;
 }
 
 /* Media Queries */
 @media (min-width: 768px) {
+    #colse{
+        text-align: end;
+        display: block;
+        font-size: 20px;
+    }
+    #colse{
+
+        display: none;
+
+    }
     .inicio {
         width: 350px;
     }
@@ -179,7 +200,7 @@ span {
 
     #trabajos {
         margin-top: 16px;
-        height: 60vh;
+        height: 55vh;
         overflow: auto;
         border-radius: 5px;
         width: 95%;
@@ -213,7 +234,6 @@ span {
         overflow-y: auto;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 10px;
         width: 100%;
     }
 
@@ -239,7 +259,6 @@ span {
 
     #perfil {
         height: 100vh;
-        width: 310px;
     }
 
     .modal {
@@ -269,7 +288,7 @@ span {
     }
 
     #trabajos {
-        height: 65vh;
+        height: 60vh;
     }
 
     .card:first-child img {
@@ -307,11 +326,19 @@ span {
     }
 
     .modal {
-        padding: 90px 200px;
+        padding: 90px 400px;
     }
 
     .card-img-top {
         height: 350px;
     }
+    
+}
+@media (min-width: 1920px) {
+
+    .modal {
+        padding: 90px 600px;
+    }
+
     
 }
